<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    android:contentDescription="@null"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="183dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flavor_spinner"
        app:layout_constraintVertical_bias="0.544"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/peanuts_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/peanuts" />

            <CheckBox
                android:id="@+id/mm_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/m_ms"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/almonds_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/almonds"
                tools:ignore="TextContrastCheck" />

            <CheckBox
                android:id="@+id/brownies_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/brownies"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/strawberries_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/strawberries" />

            <CheckBox
                android:id="@+id/oreos_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/oreos"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/gummies_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/gummy_bears" />

            <CheckBox
                android:id="@+id/marshmallows_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCheckBox"
                android:paddingStart="0sp"
                android:paddingEnd="40sp"
                android:text="@string/marshmallows" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/works_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="16dp"
        android:letterSpacing="0.001"
        android:text="@string/the_works"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/order_button"
        app:layout_constraintStart_toEndOf="@+id/works_button" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:text="@string/order"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="220dp"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:text="@string/ice_cream_sundae_maker"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sunday_imageView"
        android:layout_width="94dp"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ice_cream_sundae_maker"
        app:layout_constraintEnd_toStartOf="@+id/title_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sundae" />

    <TextView
        android:id="@+id/price_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_3_14"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <SeekBar
        android:id="@+id/fudge_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="1"
        android:progressBackgroundTint="#9C27B0"
        android:progressTint="#B169CC"
        android:thumbTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toStartOf="@+id/progress_textView"
        app:layout_constraintStart_toEndOf="@+id/fudge_textView"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/progress_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_1_oz"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/fudge_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/hot_fudge"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/works_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Spinner
        android:id="@+id/flavor_spinner"
        android:layout_width="183dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textView"
        app:layout_constraintVertical_bias="0.542"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/icecream_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/ice_cream"
        android:textColor="#616161"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/size_textView"
        app:layout_constraintEnd_toStartOf="@+id/flavor_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textView" />

    <TextView
        android:id="@+id/size_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textColor="#616161"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/size_spinner"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flavor_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>