<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    tools:context=".AboutActivity">

  <TextView
      android:id="@+id/about_textView"
      android:layout_width="274dp"
      android:layout_height="139dp"
      android:layout_marginTop="319dp"
      android:layout_marginBottom="250dp"
      android:fontFamily="cursive"
      android:text="@string/made_by_brenda_garcia"
      android:textAlignment="center"
      android:textSize="48sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:text="@string/ice_cream_sundae_maker_right"
      android:textAlignment="center"
      android:textColor="#455A64"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="150dp"
      android:layout_height="182dp"
      android:layout_marginTop="24dp"
      android:contentDescription="@string/ice_cream_sundae_maker"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/sundae" />
</androidx.constraintlayout.widget.ConstraintLayout>